# PengolahanDataHidrologi

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-windows.yml
src/: global.css  index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: hidrologi.db
src-tauri/src/: db.rs  errors.rs  lib.rs  main.rs
src-tauri/src/commands/: data.rs  file.rs  kualitas_air.rs  mod.rs
src-tauri/src/database/: connection.rs
src-tauri/src/database/migrations/: 001_initial.sql  002_expanded_schema.sql  mod.rs
src-tauri/src/handlers/: mod.rs  water_quality.rs
src-tauri/src/models/: kualitas_air.rs  measurement.rs  mod.rs  station.rs  water_quality.rs
src-tauri/src/services/: csv_service.rs  data_service.rs  db_service.rs  ip_calc.rs  mod.rs  pdf_engine.rs  storet_calc.rs
src-tauri/src/utils/: error.rs
src/components/: header.js  sidebar.js  workdesk.js
src/pages/: cetak-kualitas-air.css  cetak-kualitas-air.html  cetak-kualitas-air.js  dashboard.js  database-kualitas-air.css  database-kualitas-air.html  database-kualitas-air.js  kualitas-air.css  kualitas-air.html  kualitas-air.js
src/styles/: dashboard.css  global.css  header.css  kualitas-air.css  sidebar.css  variables.css
src/utils/: pdf-engine.js
