[package]
name = "data-hidrologi"
version = "0.0.1"
description = "Aplikasi Pengolahan Data Hidrologi"
authors = ["Mohammad Iznaen Tanggapili"]
edition = "2021"

[lib]
name = "data_hidrologi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (SQLite)
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
pdf-extract = "0.7"
tauri-plugin-dialog = "2.6.0"
